--- a/index.html
+++ b/index.html
@@ -6,13 +6,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QR Code - Generator</title>
-  
+
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/scripts.js" defer></script>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div class="container">
+    <header id="qr-header">
+      <h1>Gerador de QR Code</h1>
+      <p>Insira uma URL ou texto, para criar um QR Code</p>
+    </header>
+
+    <div id="qr-form">
+      <input type="text" placeholder="Digite a URL ou texto...">
+      <button>Gerar QR Code</button>
+    </div>
+
+    <div id="qr-code">
+      <img src="img/qrcode.png" alt="QR Code">
+    </div>
+  </div>
 </body>
 </html>
